--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ a:hover {
 h2 {
   color: #222f3e;
   font-size: 2rem;
+  margin-bottom: 2%;
 }
 h3 {
   font-size: 1.6rem;
@@ -141,6 +142,7 @@ h3 {
   padding: 2%;
   background-color: white;
   border-radius: 15px;
+  box-shadow: 0px 0px 11px 1px rgb(194, 193, 193);
 }
 
 .food-menu-img {
